// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button rendering renders expected elements when className is set 1`] = `
<button
  className="Button Button--medium Button--tertiary testClass"
  id="test"
  type="submit"
>
  Test
</button>
`;

exports[`Button rendering renders expected elements when disabled is true 1`] = `
<button
  className="Button Button--medium Button--tertiary"
  disabled={true}
  id="test"
  type="submit"
>
  Test
</button>
`;

exports[`Button rendering renders expected elements when onClick is not specified 1`] = `
<button
  className="Button Button--medium Button--tertiary"
  id="test"
  type="submit"
>
  Test
</button>
`;

exports[`Button rendering renders expected elements when onClick is specified 1`] = `
<button
  className="Button Button--medium Button--tertiary"
  id="test"
  onClick={[MockFunction]}
  type="button"
>
  Test
</button>
`;

exports[`Button rendering renders expected elements when size is small 1`] = `
<button
  className="Button Button--small Button--tertiary"
  id="test"
  type="submit"
>
  Test
</button>
`;

exports[`Button rendering renders expected elements when tooltipText is set 1`] = `
<button
  className="Button Button--medium Button--tertiary"
  id="test"
  type="submit"
>
  Test
</button>
`;

exports[`Button rendering renders expected elements when type is primary 1`] = `
<button
  className="Button Button--medium Button--primary"
  id="test"
  type="submit"
>
  Test
</button>
`;
